network-poc/policies/edge.yaml
# Allow all ingress traffic to edge
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: edge-net-policy
spec:
  podSelector:
    matchLabels:
      tier: edge
  ingress:
  - {}
