network-poc/policies/gw_service_from_edge.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: service-gw-net-policy-2
spec:
  podSelector:
    matchLabels:
      tier: gw-service
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            tier: edge
