network-poc/policies/gw_service_from_service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: service-gw-net-policy-1
spec:
  podSelector:
    matchLabels:
      tier: gw-service
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            tier: service
