network-poc/policies/service_from_gw_service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: service-net-policy-2
    namespace: default
spec:
  podSelector:
    matchLabels:
      tier: service
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            tier: gw-service
